<resources>
    <string name="app_name">CATBI</string>
    <string name="title_busqueda">Búsqueda</string>
    <string name="title_ubicacion">Ubicación</string>
    <string name="title_Perfil">Perfil</string>
    <string name="title_activity_biblioteca_ubicacion">Mapa de ubicacion</string>
    <string name="title_busqueda_basica">Busqueda Básica</string>
    <string name="texto_busqueda">Escriba una palabra o frase</string>
    <string name="texto_boton">Buscar</string>
    <string name="hint_edit_text">Don Quijote</string>
    <string name="txt_limpiar">Limpiar Búsqueda</string>
    <string name="txt_sugerencias">Sugerencias de Búsqueda</string>
    <string name="txt_reserva_exi">Su reserva ha sido exitosa</string>
    <string name="txt_reserva_no_exi">Su reserva no pudo realizarse</string>
    <string name="txt_title_reser">Se reserva de: </string>
    <string name="txt_ubic_reser">Ubicada en:</string>
    <string name="txt_durac_reser">Ha sido reservada por:</string>
    <string name="txt_button_reser_accep">Aceptar</string>
    <string name="texto_reserva">Reservar Libro</string>
    <string name="hint_campo_text">Todos</string>
    <string name="hint_general">General</string>
    <string name="title_add_mat">Agregar nuevo material</string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <string name="coleccion">Colección</string>
    <string name="tipo_mat">Tipo de material</string>
    <string name="idioma">Idioma</string>
    <string name="cant">Cantidad</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="btn_agregar">Agregar material</string>
    <string name="editar_material">Editar</string>
    <string name="eliminar_material">Eliminar</string>
    <string name="boton_actualizar">Actualizar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="hint_todas">Todas</string>
    <string name="titulo_busc_user">Buscar usuario para cancelacion de reserva</string>
    <string name="texto_busc_user">Ingrese el nombre del usuario</string>
    <string name="btn_busc_user">Buscar usuario</string>


</resources>