<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_busqueda">

    <fragment
        android:id="@+id/nav_busqueda"
        android:name="cr.ac.ucr.ecci.eseg.catbi.ui.Busqueda.BusquedaFragment"
        android:label="@string/title_busqueda"
        tools:layout="@layout/fragment_busqueda" />

    <fragment
        android:id="@+id/nav_ubicacion"
        android:name="cr.ac.ucr.ecci.eseg.catbi.ui.Ubicacion.UbicacionFragment"
        android:label="@string/title_ubicacion"
        tools:layout="@layout/fragment_ubicacion" />

    <fragment
        android:id="@+id/nav_preguntas"
        android:name="cr.ac.ucr.ecci.eseg.catbi.ui.Perfil.PerfilFragment"
        android:label="@string/title_Perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>